--- a/dev/statics/css/index.less
+++ b/dev/statics/css/index.less
@@ -25,11 +25,11 @@ header{
 .login-box{
 	margin:0 auto;
 	width:60%;
+	display:flex;
+	
 }
 .frombox{
 	height:@height;
-	display:-moz-box;
-	display:-webkit-box;
 	display:box;
 	overflow: hidden;
 	.bor;
