--- a/dev/statics/css/common.css
+++ b/dev/statics/css/common.css
@@ -19,7 +19,7 @@ sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: b
 sup { top: -0.5em; }
 sub { bottom: -0.25em; }
 img { border: 0; vertical-align: middle; }
-hr { -moz-box-sizing: content-box; box-sizing: content-box; height: 0; }
+hr { box-sizing: content-box; height: 0; }
 pre { overflow: auto; white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
 code, kbd, pre, samp { font-family: monospace, monospace; font-size: 1em; }
 
@@ -32,7 +32,7 @@ button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
 input { line-height: normal; outline:none;}
 input[type="checkbox"], input[type="radio"] { box-sizing: border-box; padding: 0; }
 input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button { height: auto; }
-input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+input[type="search"] { -webkit-appearance: textfield; box-sizing: border-box; }
 input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
 fieldset { border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.75em; }
 legend { border: 0; padding: 0; }
